--- a/jcinema/member/login.html
+++ b/jcinema/member/login.html
@@ -6,378 +6,14 @@
     <link rel="shortcut icon" href="/jcinema/img/favicon.ico"/>
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/sub.css">    
+    <link rel="stylesheet" href="../css/sub.css">
+    <link rel="stylesheet" href="../css/member.css">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>    
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>    
     <script src="../js/topBanner.js"></script>
     <script src="../js/ticket.js"></script>
 </head>
-
-<style>
-#sub.login {}
-#sub.login > section {
-    width: 100%;
-    min-height: 300px;
-    background: #f9f6ec;
-    margin-bottom: 36px;
-}
-#sub.login > section > div {
-    width:980px;
-    height: auto;
-    margin:0 auto;
-    padding: 50px 0 50px;
-    box-sizing: border-box;
-}
-
-/* 상단제목 */
-#sub.login > section > div > h1 {
-    padding-bottom: 20px;
-    font-size: 28px;
-    color: #231f20;
-}
-/* 콘텐츠 */
-#sub.login > section > div > article {
-    background: #fff;
-    padding: 30px;
-}
-/* 탭 3개 전체 */
-#sub.login > section > div > article > ul.tab_btn {
-    height: 53px;
-    overflow: hidden;
-}
-#sub.login > section > div > article > ul.tab_btn > li {
-    float:left;
-    width: 33.3%;
-}
-/* 상단 탭 3개 각각 */
-#sub.login > section > div > article > ul.tab_btn > li > a {
-    display: block;
-    text-align: center;
-    font-size: 14px;
-    color: #35383d;
-    line-height: 50px;
-    border-top: 1px solid #dedede;
-    border-right: 1px solid #dedede;
-    border-bottom: 1px solid #231f20;
-    box-sizing: border-box;
-}
-#sub.login > section > div > article > ul.tab_btn > li.on {}
-/* 회원 */
-#sub.login > section > div > article > ul.tab_btn > li.on > a {
-    z-index: 1;
-    border-top: 3px solid #231f20;
-    border-left: 1px solid #231f20;
-    border-right: 1px solid #231f20;
-    border-bottom: 1px solid #fff;
-    font-weight: bold;
-    color: #35383d;
-    box-sizing: border-box;
-}
-#sub.login > section > div > article > div.tab {
-    min-height: 300px;
-}
-/* 탭 아래 영역 비선택부분 */
-#sub.login > section > div > article > div.tab > div {
-    display: none;
-    width: 100%;
-}
-/* 탭 아래 영역 선택부분 87번 때문에 모든 문제가 발생했다ㅏㅏㅏ*/
-#sub.login > section > div > article > div.tab > .on {
-    display:block;
- /* float: left; */
-}
-
-/* 탭1 회원영역 */
-#sub.login > section > div > article > div.tab > div.tab1 {
-    position: relative;
-}
-.tab1 > form {
-    display: inline-block;
-    margin-top: 60px;
-    overflow: hidden;
-}
-.tab1 > form > input {
-    background: #f5f5f5;
-    padding: 10px;
-    border:1px solid #ccc;
-}
-
-.tab1 > form > div {
-    float:left;
-}
-.tab1 > form > div > label {
-    display: block;
-    margin-bottom: 10px;
-}
-/* 아이디, 비밀번호 */
-.tab1 > form > div > label > span {
-    display: inline-block;
-    width: 89px;
-    height: 20px;
-    text-align: left;
-    font-weight: bold;
-    font-size: 14px;
-    vertical-align: middle;
-    color: #353535;
-}
-/* 아이디 비번 입력창 */
-.tab1 > form > div > label > input {
-    width: 253px;
-    height: 40px;
-    padding: 10px;
-    border: 1px solid #dedede;
-    background: #f5f5f5;
-    box-sizing: border-box;
-}
-.tab1 > form > input[type=submit] {
-    float:left;
-    width: 98px;
-    height: 90px;
-    padding-top: 38px;
-    margin-left: 6px;
-    text-align: center;
-    font-size: 14px;
-    color: #e5e1b0 !important;
-    background: #231f20 url('../img/ico_login.png') no-repeat 50% 19px;
-
-}
-/* 아이디 저장 */
-.tab1 > p {
-    display: block;
-    width: 450px;
-    padding: 20px 0 30px;
-    font-size: 14px;
-    text-align: center;
-    border-bottom: 1px solid #dedede;
-    box-sizing: border-box;
-}
-.tab1 > p input {
-    vertical-align: bottom;
-    margin-right:4px;
-}
-/* 아이디 비번 찾기 */
-.tab1 > p > a {
-    display: inline-block;
-    width: 120px;
-    height: 16px;
-    margin-left: 40px;
-    background-image: url('../img/ico_right_arrow.gif');
-    background-repeat: no-repeat;
-    background-position: right 2px;
-}
-/* 우측 배너 */
-.tab1 > img {
-    position: absolute;
-    top:40px;
-    right:0;
-}
-
-
-/* 2번째 비회원 탭 */
-#sub.login > section > div > article > div.tab > div.tab2 {      
-    width: 100%;
-    min-height: 950px;
-    padding-top: 40px;
-    z-index: 1;
-    box-sizing: border-box;
-}
-/* 카카오배너 */
-#sub.login div.tab2 > img {
-    border: 0;
-    margin: 0 0 30px !important;
-}
-/* 비회원 안내 */
-#sub.login div.tab2 > p {
-    padding-left: 10px;
-    background: url(/jcinema/img/bullet.gif) no-repeat 0 7px;
-    color: #666;
-    line-height: 18px;
-    margin-bottom: 38px;
-}
-/* 개인정보 안내  */
-#sub.login div.tab2 > textarea {
-    width: 100%;
-    height: 167px;
-    margin-bottom: 0;
-    padding: 20px;
-    border: 1px solid #dedede;
-    overflow-y: auto;
-    background: #f9f6ec;
-    font-size: 14px;
-    color: #666;
-    resize: none;
-    box-sizing: border-box;
-}
-#sub.login div.tab2 > label.agree  {
-    display: block;
-    margin-top: 25px;
-    margin-left: 8px;
-    font-size: 14px;
-    color: #231f20;
-    margin-bottom: 25px;
-    padding-bottom: 26px;
-    border-bottom: 1px solid #e5e5e5;
-    box-sizing: border-box;
-}
-
-#sub.login div.tab2 > label.agree > input {
-    border:1px solid red;
-}
-/* 비회원로그인창 */
-#sub.login div.tab2 > div {
-    position: relative;
-}
-/* 안내문 */
-#sub.login div.tab2 > div > p {
-    padding-left: 10px;
-    background: url(/jcinema/img/bullet.gif) no-repeat 0 7px;
-    color: #666;
-    line-height: 18px;
-}
-/* 안내폼 */
-#sub.login div.tab2 > div > form {}
-#sub.login div.tab2 > div > form > div {
-    width: 50%;
-}
-#sub.login div.tab2 > div > form > div > label {
-    float:left; 
-    margin: 5px 0;
-}
-/* 타이틀 */
-#sub.login div.tab2 > div > form > div > label > span {
-    float:left;
-    width: 60px;
-    margin: 0 10px;
-    text-align: left;
-    color: #353535;
-    font: bold 14px "";
-}
-#sub.login div.tab2 > div > form > div > label.pass2 > span {
-    padding-left:10px;
-}
-/* 인풋타입 기본틀 */
-#sub.login div.tab2 label > input {
-    height: 40px;
-    padding: 10px;
-    border: 1px solid #dedede;
-    background: #f5f5f5;
-    box-sizing: border-box;
-}
-.tab2 > div > form > div > label.name > input {width: 360px;}
-.tab2 > div > form > div > label.pass > input {width: 135px;}
-#sub.login div.tab2 > div > form > div > label.hp > input {
-    width: 109px;
-    height: 40px;
-}
-/* 모든 드롭다운 메뉴 */
-#sub.login div.tab2 > div > form > div > label > select {
-    width: 109px;
-    height: 40px;
-    line-height: 40px;
-    padding: 10px 0;
-    border: 1px solid #e8e8e8;
-}
-/* 확인 */
-#sub.login div.tab2 > div > form > input[type=submit] {
-    position: absolute;
-    bottom:-270px; left:40%;
-    width: 120px;
-    height: 40px;
-    padding: 0px 10px;
-    border: 1px solid #231f20;
-    font: bold 16px "";
-    background: #231f20;
-    color: #e5e1b0;
-    line-height: 40px;
-    text-align: center;
-    box-sizing: border-box;
-}
-/* 포스터 */
-#sub.login div.tab2 > div > img {
-    position: absolute;
-    top:0; 
-    right: 0;
-}
-
-
-/* 3번째 탭 */
-#sub.login > section > div > article > div.tab > div.tab3 {
-    width: 100%;    
-    height: auto;
-    padding-top: 40px;
-    position: relative;
-    box-sizing: border-box;
-}
-.tab3 > p {
-    padding-left: 10px;
-    background: url(/jcinema/img/bullet.gif) no-repeat 0 7px;
-    color: #666;
-    line-height: 18px;
-}
-.tab3 > a.naver {
-    display: block;
-    margin: 20px 0 30px 10%;
-    width: 220px;
-    height: 45px;
-    padding-left: 44px;
-    line-height: 45px;
-    color: #fff;
-    font-size: 14px;
-    font-weight: bold;
-    background: #18c718 url(/jcinema/img/ico_naver.gif) no-repeat 0 0;
-    border: 1px solid #0fa600;
-    box-sizing: border-box;
-}
-.tab3 > a.naver > span {
-    padding-left: 19px;
-    border-left: 1px solid #0fa600;
-}
-.tab3 > div {}
-/* 아이디, 비번찾기 */
-.tab3 > div > a  {
-    display: inline-block;
-    background: url(/jcinema/img/ico_page_blank.gif) no-repeat right center;
-    padding-right: 15px;
-    font-size: 14px;
-    color: #231f20;
-}
-.tab3 > div > a:first-child {
-    margin-left: 100px;
-    border-right: 1px solid #dcdcdc;
-    margin-right: 15px;
-}
-.tab3 > img {
-    position: absolute;
-    top:40px; right:0;
-}
-
-
-/* L포인트 아이디 하나면 */
-#sub.login > section > div > p {
-    width: 100%;
-    height: 82px;
-    padding: 25px 0;
-    background: #efebdb;
-    font-size: 13px;
-    text-align: center;
-    line-height: 32px;
-    box-sizing: border-box;
-}
-/* 회원가입 */
-#sub.login > section > div > p > a {
-    display: inline-block;
-    width: 90px;
-    line-height: 30px;
-    background: #fff;
-    border: 1px solid #d1d1d1;
-    margin-left: 6px;
-    font-size: 13px;
-    color: #231f20;
-    box-sizing: border-box;
-    text-align: center;
-    font-weight: bold;
-}
-</style>
 
 <script>
 
@@ -462,7 +98,7 @@
                         
                         <div class="tab">
                             <!-- 탭1 -회원- 영역 -->
-                            <div class="tab1">
+                            <div class="tab1 on">
                                 
                                 <form action="#">
                                     <div>
@@ -481,7 +117,7 @@
                             </div>
 
                             <!-- 탭2 -비회원- 영역 -->
-                            <div class="tab2 on">
+                            <div class="tab2">
 
                                 <img class="kakao_banner" src="../img/login_banner_kakao.png" alt="로그인 없이 바로 예매! 톡티켓으로 바로 입장">
 
