--- a/jcinema/member/mycinema.html
+++ b/jcinema/member/mycinema.html
@@ -7,276 +7,8 @@
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="../css/style.css">    
     <link rel="stylesheet" href="../css/sub.css">
-    <link rel="stylesheet" href="../css/style_member.css">
-    <style>
-        #sub.my-cinema {}
-        #sub.my-cinema > section {}
-        #sub.my-cinema > section:first-child {
-            background: #f9f6ec;          
-        }
-        #sub.my-cinema > section > div {
-            font-size: 14px;
-            padding: 50px 0; 
-            width: 980px;
-            margin:0 auto;
-        }
-        #sub.my-cinema > section > div.my-info {    
-            font-size: 14px;
-            color: #777;
-        }
-        /* 상단제목 */
-        .my-info > h1 {
-            padding-bottom: 20px;
-            font-size: 28px;
-            color: #231f20;
-        }
-        .my-info > h2 {    
-            overflow: hidden;
-            padding: 17px 30px 17px;
-            background: #282e34;
-        }
-        .my-info > h2 > span {
-            font-size: 16px;
-            font-weight: normal;
-        }
-        .my-info > h2 > span > em {
-            font-style: normal;
-            color: #cdc197;
-        }
-        .my-info > h2 > span.name {
-            float: left;
-            color: #fff;
-        }
-        .my-info > h2 > span.grade {
-            float: right;
-            margin-right: 15px;
-            padding-right: 15px;
-            color: #c5c5c5;
-            line-height: 20px;
-        }
-        /* 오른쪽 일반 */
-        .my-info > h2 > span.grade > em {
-            font-size: 20px;
-            font-weight: bold;
-            margin: 0 10px 0 10px;
-        }
+    <link rel="stylesheet" href="../css/member.css">
 
-        .my-info > article {}
-        .my-info > article > div {
-            padding: 20px 30px;
-            border-bottom: 1px solid #e5e5e5;
-            background: #fff;
-            box-sizing: border-box;
-        }
-        /* 마이영화관 */
-        .my-info > article > div > strong {
-            margin-right: 20px;
-            padding-right: 20px;
-            font-size: 16px;
-            color: #231f20;
-            line-height: 32px;
-        }
-        /* 설정하기 */
-        .my-info > article > div > a {
-            display: inline-block;
-            width: 30px;
-            height: 30px;
-            background: url(/jcinema/img/btn_setting.gif) no-repeat 0 0;
-            overflow: hidden;
-            text-indent: -9999em;
-        }
-        /* div.point 와 div.coupon을 float로 잡았더니 상위섹션 높이가 고정되지 않는 것을 여기에 오버플로우 씌운 것으로 해결함!! */
-        .my-info > article > section {
-            overflow: hidden;
-        }   
-        .my-info > article > section > div.point {
-            position: relative;
-            float: left;    
-            width: 50%; 
-            height: 211px;
-            padding: 30px 30px 40px;
-            border-left: 1px solid #e5e5e5;
-            background: #fff;
-            box-sizing: border-box;
-        }
-        /* 포인트 안내 */
-        .my-info > article > section > div.point > p:nth-of-type(3) {
-            font-size: 12px;
-            line-height: 25px;
-            color: #666;
-            letter-spacing: -1px;
-            margin-top:50px;
-        }
-        /* L포인트 (보유쿠폰정보 */
-        .my-info > article > section > div > p > strong {
-            display: inline-block;
-            height: 25px;
-            margin-bottom: 30px;
-            font-size: 16px;
-            font-weight: bold;
-            color: #231f20;
-            line-height: 25px;
-        }
-        /* 조회하기 (등록하기 */
-        .my-info > article > section > div > p > a {
-            float: right;
-            display: block;
-            width: 67px;
-            height: 25px;
-            border: 1px solid #999;
-            font-size: 13px;
-            color: #231f20;
-            line-height: 23px;
-            box-sizing: border-box;
-            text-align: center;
-        }
-        /* 사용가능 */
-        .my-info > article > section > div.point > p > em {
-            float: left;
-            width: 55px;
-            height: 23px;
-            line-height: 23px;
-            margin-right: 39px;
-            background: #007fb4;
-            font-size: 12px;
-            color: #fff;
-            box-sizing: border-box;
-            text-align: center;
-        }
-        .my-info > article > section > div.point > p > span {
-            float: right;
-            font-size: 36px;
-            line-height: 23px;
-            letter-spacing: -1px;
-            font-family: 'linlivertine';
-            color: #231f20;
-        }
-
-        /* 쿠폰리스트 */
-        .my-info > article > section > div.coupon {
-            position: relative;
-            float:left;
-            width: 50%;
-            height: 211px;
-            padding: 30px 30px 40px;
-            border-left: 1px solid #e5e5e5;
-            background: #fff;
-            box-sizing: border-box;
-        }
-        .my-info > article > section > div.coupon > ul {}
-        .my-info > article > section > div.coupon > ul > li {
-            line-height: 18px;
-            margin-bottom: 10px;
-            font-size: 14px;
-        }
-        .my-info > article > section > div.coupon > ul > li > span {
-            float: right;
-        }
-        .my-info > article > section > div.coupon > ul > li > span > i {
-            font-size: 24px;
-            font-family: 'linlivertine';
-            margin: 0 3px 0 0;
-            vertical-align: -2px;
-            font-style: normal;
-        }
-
-
-        /* 예매 내역 및 그 외 정보관리창 */
-        #sub.my-cinema > section > div.reserve-history {}
-        .reserve-history > ul {
-            margin-bottom: 0;
-            position: relative;
-            width: 100%;
-        }
-        /* 여기에 float:left를 해야할 것 같은데 안 먹어서 아래로... */
-        .reserve-history > ul > li {}
-        /* 구매내역 탭 */
-        .reserve-history > ul > li > a {
-            display: block;
-            float: left;
-            width: 25%;
-            height: 49px;
-            background: #efebdb;            
-            border-bottom: 1px solid #231f20;
-            font-size: 14px;
-            color: #231f20;
-            text-align: center;
-            box-sizing: border-box;
-        }
-        /* 탭 내부 글자 높이 중앙정렬용... 대체 이게 뭐지; */
-        .reserve-history > ul > li > a:before {
-            content: '';
-            display: inline-block;
-            width: 0;
-            height: 100%;
-            vertical-align: middle;
-        }
-        .reserve-history > ul > li.on > a {
-            background: #231f20;
-            color: #cdc197;
-        }
-        .reserve-history > div {}
-        .reserve-history > div.tab {
-        }
-        .reserve-history > .tab > div {
-        }
-        .reserve-history > .tab > div.tab1 {
-            padding: 80px 0 0;
-            color: #231f20;
-        }
-        /* 구매내역이 없습니다 구역 */
-        .reserve-history > .tab > .tab1 > article {
-            width: 100%;
-            padding: 50px 0;
-            text-align: center;
-            margin-bottom: 20px;
-            border-bottom: 1px solid #c0c0c0;
-        }
-        /* 느낌표 아이콘 */
-        .reserve-history > .tab > .tab1 > article > p {
-            display: inline-block;
-            height: 23px;
-            padding-left: 28px;
-            background: url(/jcinema/img/ico_nodata.png) no-repeat 0 0;
-            font-size: 18px;
-            color: #777;
-            line-height: 25px;
-        }
-        .reserve-history > .tab > .tab1 > div {}
-        /* 유의사항 회색박스 */
-        .reserve-history > .tab > .tab1 > div.pay-attention {
-            margin-top: 50px;
-            padding: 30px 0 30px 26px;
-            background: #f5f5f5;
-            box-sizing: border-box;
-        }
-        /* 유의사항 */
-        .reserve-history > .tab > .tab1 > .pay-attention > h5 {
-            padding: 0 0 10px 25px;
-            background: url(/jcinema/img/ico_warn.gif) no-repeat left top;
-            font-size: 14px;
-            font-weight: bold;
-            color: #231f20;
-        }
-        .reserve-history > .tab > .tab1 > .pay-attention > p {
-            font-size: 12px;
-            color: #666;
-            line-height: 26px;
-        }
-        .reserve-history > .tab > .tab1 > .pay-attention > p > span {
-            font-weight: bold;
-        }
-        .reserve-history > .tab > .tab1 > .pay-attention > p > em {
-            color: #cd190b !important;
-            font-style: normal;
-        }
-        
-        .reserve-history > .tab > .tab1 > .pay-attention > p > em.important {
-            font-weight: bold;
-        } 
-
-    </style>
-    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>    
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>    
     <script src="../js/topBannerBg.js"></script>
