--- a/dmall/index.html
+++ b/dmall/index.html
@@ -87,35 +87,202 @@
                 <ul>
                     <li><a href=""><img src="/dmall/img/banner/main_slider_01.jpg" alt=""></a></li>
                 </ul>
+                <div class="main_slider_bottom">
+                    <ul>
+                        <li>여기는</li>
+                        <li>슬라이더의</li>
+                        <li>타이틀을</li>
+                        <li>기재하는</li>
+                        <li>곳입니다</li>
+                    </ul>
+            </div>
             </article>
         </div>
         <div class="sub_slider">
-            <article></article>
+            <article>
+                <div class="sub_slider_left">
+                    <a href="#"><img src="/dmall/img/banner/sub_slider_left_01.jpg" alt=""></a>
+                </div>
+                <div class="sub_slider_center">
+                    <a href="#"><img src="/dmall/img/banner/sub_slider_center_01.jpg" alt=""></a>
+                </div>
+                <div class="sub_slider_right">
+                    <a href="#"><img src="/dmall/img/banner/sub_slider_right_01.jpg" alt=""></a>
+                </div>
+            </article>
         </div>
+
         <div class="line_banner_01">
             <article>
                 <a href=""><img src="/dmall/img/banner/line_banner_01.jpg" alt=""></a>
             </article>
         </div>
-        <dl class="mail_title">
-            <dt></dt>
-            <dd></dd>
-        </dl>
+
+        <div class="main_deal">
+            <article>
+                <dl>
+                    <dt><img src="/dmall/img/title_deal.png" alt=""></dt>
+                    <dd class="main_deal goods">
+                        <dl>
+                            <dt>
+                                <a href="#"><img src="/dmall/img/goods/deal_01.gif" alt=""></a>
+                            </dt>
+                            <dd>
+                                <dl>
+                                    <dt class="cut_text">[싼딜]티셔츠 TRAY 30P + 폴더</dt>
+                                    <dd>
+                                        <ul>
+                                            <li class="first">
+                                                <s>44,900</s><br>
+                                                <span><strong>15,720</strong>원</span>
+                                            </li>
+                                            <li class="second">
+                                                <span><strong>64</strong>%</span>
+                                            </li>
+                                        </ul>
+                                    </dd>
+                                </dl>
+                            </dd>
+                        </dl>
+                        <dl>
+                            <dt>
+                                <a href="#"><img src="/dmall/img/goods/deal_01.gif" alt=""></a>
+                            </dt>
+                            <dd>
+                                <dl>
+                                    <dt class="cut_text">[싼딜]티셔츠 TRAY 30P + 폴더</dt>
+                                    <dd>
+                                        <ul>
+                                            <li class="first">
+                                                <s>44,900</s><br>
+                                                <span><strong>15,720</strong>원</span>
+                                            </li>
+                                            <li class="second">
+                                                <span><strong>64</strong>%</span>
+                                            </li>
+                                        </ul>
+                                    </dd>
+                                </dl>
+                            </dd>
+                        </dl>
+                        <dl>
+                            <dt>
+                                <a href="#"><img src="/dmall/img/goods/deal_01.gif" alt=""></a>
+                            </dt>
+                            <dd>
+                                <dl>
+                                    <dt class="cut_text">[싼딜]티셔츠 TRAY 30P + 폴더</dt>
+                                    <dd>
+                                        <ul>
+                                            <li class="first">
+                                                <s>44,900</s><br>
+                                                <span><strong>15,720</strong>원</span>
+                                            </li>
+                                            <li class="second">
+                                                <span><strong>64</strong>%</span>
+                                            </li>
+                                        </ul>
+                                    </dd>
+                                </dl>
+                            </dd>
+                        </dl>
+                    </dd>
+                </dl>
+                <div class="main_deal_more"><span>더보기</span></div>
+            </article>
+        </div>
+
         <div class="line_banner_02">
             <article>
                 <a href=""><img src="/dmall/img/banner/line_banner_02.jpg" alt=""></a>
             </article>
         </div>
+
         <div class="main_promotion">
             <article>
+                <div>
+                    <p>
+                        <a href=""><img src="/dmall/img/banner/main_promo_01.jpg" alt=""></a>
+                    </p>
+                </div>
+                <div class="main_promotion right">
+                    <ul>
+                        <li></li>
+                    </ul>
+                </div>
+                <div class="main_promotion slider">
+                    <dl>
+                        <dt>
+                            <a href=""><img src="/dmall/img/goods/main_promo_hit_01.gif" alt=""></a>
+                            <span><img src="/dmall/img/best_new_icon.png" alt=""><strong>1</strong></span>
+                        </dt>
+                        <dd>
+                            <ul>
+                                <li class="cut_text">Home 인테리어</li>
+                                <li class="price"><strong>5000</strong>원</li>
+                            </ul>
+                        </dd>
+                    </dl>
+                    <dl>
+                        <dt>
+                            <a href=""><img src="/dmall/img/goods/main_promo_hit_01.gif" alt=""></a>
+                            <span><img src="/dmall/img/best_new_icon.png" alt=""><strong>1</strong></span>
+                        </dt>
+                        <dd>
+                            <ul>
+                                <li class="cut_text">Home 인테리어</li>
+                                <li class="price"><strong>5000</strong>원</li>
+                            </ul>
+                        </dd>
+                    </dl>
+                    <dl>
+                        <dt>
+                            <a href=""><img src="/dmall/img/goods/main_promo_hit_01.gif" alt=""></a>
+                            <span><img src="/dmall/img/best_new_icon.png" alt=""><strong>1</strong></span>
+                        </dt>
+                        <dd>
+                            <ul>
+                                <li class="cut_text">Home 인테리어</li>
+                                <li class="price"><strong>5000</strong>원</li>
+                            </ul>
+                        </dd>
+                    </dl>
+                    <dl>
+                        <dt>
+                            <a href=""><img src="/dmall/img/goods/main_promo_hit_01.gif" alt=""></a>
+                            <span><img src="/dmall/img/best_new_icon.png" alt=""><strong>1</strong></span>
+                        </dt>
+                        <dd>
+                            <ul>
+                                <li class="cut_text">Home 인테리어</li>
+                                <li class="price"><strong>5000</strong>원</li>
+                            </ul>
+                        </dd>
+                    </dl>
+                    <dl>
+                        <dt>
+                            <a href=""><img src="/dmall/img/goods/main_promo_hit_01.gif" alt=""></a>
+                            <span><img src="/dmall/img/best_new_icon.png" alt=""><strong>1</strong></span>
+                        </dt>
+                        <dd>
+                            <ul>
+                                <li class="cut_text">Home 인테리어</li>
+                                <li class="price"><strong>5000</strong>원</li>
+                            </ul>
+                        </dd>
+                    </dl>
+                    
+                </divclass="main_promotion_right">
 
             </article>
         </div>
+
         <div class="line_banner_03">
             <article>
                 <a href=""><img src="/dmall/img/banner/line_banner_03.jpg" alt=""></a>
             </article>
         </div>
+
         <div class="theme_banner">
             <article>
                 <div>
@@ -138,6 +305,7 @@
                 </div>
             </article>
         </div>
+
         <div class="main_bottom">
             <article>
                 <div class="main_bottom_left">
@@ -156,6 +324,7 @@
                 </div>
             </article>
         </div>
+
     </section>
 
     <footer>
