--- a/dmall/index.html
+++ b/dmall/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./css/style_common.css">
     <link rel="stylesheet" href="./css/style_header.css">
     <link rel="stylesheet" href="./css/style_main.css">
+    <link rel="stylesheet" href="./css/style_aside.css">
     <link rel="stylesheet" href="./css/style_footer.css">
 </head>
 <body>
@@ -78,7 +79,39 @@
         </nav>
     </header>
 
-    <aside></aside>
+    <aside>
+        <div class="wingBanner_right">
+            <ul>
+                <li><a href="">나의쇼핑정보</a></li>
+                <li><a href="">장바구니</a></li>
+                <li><a href="">내쿠폰</a></li>
+                <li><a href="">최근본상품</a></li>
+            </ul>
+            <div class="wbr_slider">
+                <img src="/dmall/img/banner/wingBanner_right_slider_01.png" alt="">
+                <span><</span> 1 / 1 <span>></span>
+            </div>
+            <a href="">top</a>
+            <h3>
+                <img src="/dmall/img/banner/wingBanner_right_01.png" alt="">
+            </h3>
+        </div>
+
+        <div class="wingBanner_left">
+            <div class="wbl_slider">
+                <img src="/dmall/img/banner/wingBanner_left_slider_01.jpg" alt="">
+            </div>
+            <a href="">
+                <img src="/dmall/img/banner/wingBanner_left_01.jpg" alt="">
+            </a>
+            <a href="">
+                <img src="/dmall/img/banner/wingBanner_left_02.png" alt="">
+                파로마고객감사세일</a>
+            <a href="">
+                <img src="/dmall/img/banner/wingBanner_left_03.png" alt="">
+                쿠폰</a>
+        </div>
+    </aside>
 
     <section>
         <div class="main_slider">
@@ -98,6 +131,7 @@
             </div>
             </article>
         </div>
+
         <div class="sub_slider">
             <article>
                 <div class="sub_slider_left">
@@ -207,7 +241,15 @@
                 </div>
                 <div class="main_promotion right">
                     <ul>
-                        <li></li>
+                        <li>청소</li>
+                        <li>세탁</li>
+                        <li>욕실</li>
+                        <li>인테리어</li>
+                        <li>원예</li>
+                        <li>미용</li>
+                        <li>유아동</li>
+                        <li>사무</li>
+                        <li>완구</li>
                     </ul>
                 </div>
                 <div class="main_promotion slider">
@@ -272,7 +314,7 @@
                         </dd>
                     </dl>
                     
-                </divclass="main_promotion_right">
+                </div>
 
             </article>
         </div>
@@ -285,22 +327,15 @@
 
         <div class="theme_banner">
             <article>
+                <img src="/dmall/img/title_theme.png" alt="">
                 <div>
-                    <a href="">
-                        <img src="/dmall/img/banner/theme_banner_01.jpg" alt="파로마신상 매트리스 최초특가">
-                    </a>
-                </div>
-                <div>
-                    <a href="">
-                        <img src="/dmall/img/banner/theme_banner_02.jpg" alt="큐브 공간박스 총정리">
-                    </a>
-                </div>
-                <div>
+                    <a href=""></a>
+                    <a href=""></a>
                     <ul>
-                        <li><a href=""><img src="/dmall/img/banner/theme_banner_b01.jpg" alt="네이처 적출형 수납바스켓"></a></li>
-                        <li><a href=""><img src="/dmall/img/banner/theme_banner_b02.jpg" alt="접이식 원목 좌탁 테이블"></a></li>
-                        <li><a href=""><img src="/dmall/img/banner/theme_banner_b03.jpg" alt="주방정리 스틸 선반 모음전"></a></li>
-                        <li><a href=""><img src="/dmall/img/banner/theme_banner_b04.jpg" alt="대한민국 표준의자 린백"></a></li>
+                        <li><a href=""></a></li>
+                        <li><a href=""></a></li>
+                        <li><a href=""></a></li>
+                        <li><a href=""></a></li>
                     </ul>
                 </div>
             </article>
@@ -316,10 +351,16 @@
                 </div>
                 <div class="main_bottom_right">
                     <ul>
-                        <li class="notice"></li>
-                        <li class="callcenter">
-                            <a href=""><img src="/dmall/img/banner/callcenter.jpg" alt=""></a>
+                        <li class="notice">
+                            <dl>
+                                <dt>
+                                    <span class="left">공지사항</span>
+                                    <span class="right"><a href="">전체보기</a></span>
+                                </dt>
+                                <dd>게시판내용</dd>
+                            </dl>
                         </li>
+                        <li class="callcenter"><img src="/dmall/img/banner/callcenter.jpg" alt="고객센터 1688-5700"></li>
                     </ul>
                 </div>
             </article>
